--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>Hello world</h1>
 <!-- <app-rooms></app-rooms> -->
-<ng-template #rooms></ng-template>
-<router-outlet></router-outlet>
+<!-- <a routerLink="rooms">Rooms</a>
+<a routerLink="employees">Employees</a> -->
+<!-- <ng-template #rooms></ng-template> -->
+<app-app-nav></app-app-nav>
+<!-- <router-outlet></router-outlet> -->
